src/main/java/com/github/cypher/main.css
.boxSpacing{
	-fx-padding: 10 10 10 10;
}

root {
	-fx-font-size: 14px;
}

.image-btn {
	-fx-padding: 5px;
	-fx-background-color: -fx-popup;
}

.inline-monospace {
    -fx-background-color: #777777;
}

.block-monospace {
	-fx-background-color: #777777;
}



* {
	-room-list-background: -fx-medium-base;
	-room-item-background: -fx-medium-base;
	-room-item-selection-color: -fx-soft-popup;

	-member-list-background: #e8e8e8;
	-member-item-background: #e8e8e8;
}

/*Colors */
* {
	-fx-base: -fx-light-base;
	-fx-light-base: #efefef;
	-fx-medium-base: #cecece;
	-fx-dark-base: #404040;
	-fx-soft-popup: #008CBA;
	-fx-popup: #09CDDA;
	-fx-lighter: #8c8c8c;
}

.-fx-medium *{
	-fx-base: -fx-medium-base;
	-fx-scroll-hover: -fx-dark-base;
}
.-fx-light *{
	-fx-base: -fx-light-base;
	-fx-scroll-hover: -fx-medium-base;
}
.-fx-dark *{
	-fx-base: -fx-dark-base;
	-fx-scroll-hover: -fx-medium-base;
}

.base-separator {
	-fx-background-color: -fx-lighter;
}

.clickable:hover {
	-fx-background-color: -fx-popup;
	-fx-border-width: 1, 1, 1, 1;
	-fx-border-color: -fx-soft-popup;
	-fx-cursor: hand;
}

